--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.10.2",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vesp/nuxt-fontawesome": "^1.0.4"
   }
 }
